Revise accessibility for Date/TimeView.

- make it so that accessible labels get set for both Time and Date views (previously only set on DateView).
- prioritize the time first, then the date in the accessible label itself.
- make it so ChromeVox uses the on-screen-ish label (requires some amount of tree interrogation).
- ensure the name is actually updated when the text changes
- this makes it so ChromeVox reads the time and date, from a source that knows how it should be formatted.
- still fallback to something when time is unavailable on-screen.

BUG=605833
TEST=invoke ChromeVox read time command; do this with 24/12 hour time set. Observe proper output and that time continues to be updated as time passes.
CQ_INCLUDE_TRYBOTS=tryserver.chromium.linux:closure_compilation

Review-Url: https://codereview.chromium.org/1953913002
Cr-Commit-Position: refs/heads/master@{#392156}

Former-commit-id: f289d70ec84f5421e7d69e07fc122fa5fbee23d5